tests/0049-function-body-must-be-block.src
let f = fun () 10;